--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                 <li>Private E-Mail: leon.e.sieber@icloud.com</li>
                 <li>Work E-Mail: lesieber@ksr.ch</li>
             </lu>
-            <img class="leonImage" src="Leon.jpeg">
+            <img class="leonImage" src="leon.jpeg">
             
         </div>
     </body>
