--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <script src="index.js"></script>
     </head>
     <body>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2315415547671087"
+     crossorigin="anonymous"></script>
         <div class="title">
             <h1>Leon Sieber</h1>
         </div>    
@@ -16,5 +18,6 @@
         <input type="password" id="password" placeholder="password">
         <button onclick="login()">Login</button>
         </div>
+        
     </body>
 </html>
