--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <body>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2315415547671087"
      crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-2315415547671087"
+             data-ad-slot="YOUR-AD-SLOT-ID"
+             data-ad-format="auto"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         <div class="title">
             <h1>Leon Sieber</h1>
         </div>    
