--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
         <link rel="stylesheet" href="index.css"/>
         <script src="index.js"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2315415547671087"
-     crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     </head>
     <body>
-       
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2315415547671087"
+        crossorigin="anonymous"></script>
+        <!-- Vertical -->
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-2315415547671087"
-             data-ad-slot="YOUR-AD-SLOT-ID"
-             data-ad-format="auto"></ins>
+             data-ad-slot="5835197526"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
         <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+    
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         <div class="title">
             <h1>Leon Sieber</h1>
         </div>    
