--- a/home.html
+++ b/home.html
@@ -2,21 +2,9 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="home.css"/>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2315415547671087"
-         crossorigin="anonymous"></script>
+        <meta name="google-adsense-account" content="ca-pub-2315415547671087">
     </head>
     <body>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2315415547671087"
-        crossorigin="anonymous"></script>
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-2315415547671087"
-             data-ad-slot="5835197526"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
         
         <div class="title">
             <h1>Leon Sieber</h1>
