--- a/schools.html
+++ b/schools.html
@@ -2,6 +2,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="schools.css"/>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2315415547671087"
+         crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="title">
