--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css"/>
         <script src="index.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2315415547671087"
+         crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="title">
